# Options-Trading-Assistant

./: .gitignore  ARCHITECTURE.md  Mean_Reversion_Bull_Call_Scanner_v4.md  README.md  pyproject.toml
config/: broker.yaml  scoring.yaml  strategy.yaml  universe.yaml  universe_v2.yaml  validation.yaml
docs/: broker_integration.md  edge_validation.md  prospective_tracking.md  scoring_rules.md  strategy_registry.md  strategy_spec.md  trade_management.md  v4_3_research_plan.md
research/: prospective_validation.md  prospective_validation_log.csv  roadmap.md
research/experiments/: EXP-2026-001-H-005-semiconductor-high-beta.yaml  EXP-2026-002-H-008-distribution-day-gate.yaml  README.md
research/notebooks/: README.md  feature_importance.ipynb  gold_slice_review.ipynb  h006_score_analysis.ipynb  score_bucket_analysis.ipynb  semiconductor_review.ipynb
scripts/: run_strike_durability.py  run_v4_2_baseline_from_worktree.ps1  setup_v4_2_evidence_worktree.ps1
src/options_trading_assistant/: __init__.py  cli.py  config.py  models.py
tests/: conftest.py  test_backtesting.py  test_cli_diagnostics.py  test_cli_option_scan.py  test_cli_rejections.py  test_cli_sector_ranking.py  test_cli_stock_scan.py  test_cooling_off.py  test_daily_report.py  test_dashboard.py  test_decision_packets.py  test_edge_validation.py  test_engine_boundaries.py  test_journal.py  test_journal_review.py  test_models.py  test_moomoo_provider.py  test_packet_review.py  test_scanner.py  test_scoring.py  test_signal_rankings.py  test_synthetic_options_model.py  test_universe_config.py
(+32 files in other folders)
